--- a/.env
+++ b/.env
@@ -1,2 +1,8 @@
 # Server settings
 PORT=4000
+
+# MongoDB Credentials
+MONGODB_USER=kpskispl
+MONGODB_PASSWORD=shukla123
+MONGODB_HOST=clg.bg5vb.mongodb.net
+MONGODB_NAME=clg
