buisness logic encapsulated into service layer

--- a/config/casbin_model.conf
+++ b/config/casbin_model.conf
@@ -11,4 +11,9 @@ g = _, _
 e = some(where (p.eft == allow))
 
 [matchers]
-m = r.sub == p.sub && r.obj == p.obj && r.act == p.act
+# exact match
+# m = r.sub == p.sub && r.obj == p.obj && r.act == p.act
+# key match
+# m = r.sub == p.sub && keyMatch(r.obj, p.obj) && r.act == p.act
+# key match2
+m = r.sub == p.sub && keyMatch2(r.obj, p.obj) && r.act == p.act
